Closed Bug 496420 Opened 15 years ago Closed 15 years ago

"ASSERTION: no presShell' changing currentScale in display:none iframe

Categories

(Core :: SVG, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: longsonr)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

Attached file testcase
###!!! ASSERTION: no presShell: 'presShell', file content/svg/content/src/nsSVGSVGElement.cpp, line 1068
Attached patch patchSplinter Review
Assignee: nobody → longsonr
Attachment #381623 - Flags: review?(jwatt)
Attachment #381623 - Flags: review?(jwatt) → review+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: