Bug 496420 - ASSERTION: no presShell' changing currentScale in display:none iframe. r=jwatt